# docs/swagger.json
@@ -2,20 +2,25 @@
     "swagger": "2.0",
     "info": {
         "description": "This is a sample server for managing user subscriptions.",
-        "title": "User Database API",
+        "title": "user Database API",
         "contact": {},
         "license": {
-            "name": "Apache 2.0",
+            "name": "Apache 2.1",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0"
+        "version": "2.0"
     },
     "host": "localhost:8082",
     "basePath": "/",
     "paths": {
         "/users": {
             "post": {
-                "description": "Create a new user with the provided details",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create a new User with the provided details",
                 "consumes": [
                     "application/json"
                 ],
@@ -25,15 +30,15 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Create a new user",
+                "summary": "Create a new User",
                 "parameters": [
                     {
                         "description": "User details",
-                        "name": "user",
+                        "name": "User",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/db.User"
                         }
                     }
                 ],
@@ -41,19 +46,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/db.User"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -61,7 +66,12 @@
         },
         "/users/{username}": {
             "get": {
-                "description": "Get user details by username",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get User details by username",
                 "consumes": [
                     "application/json"
                 ],
@@ -71,7 +81,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Get a user by username",
+                "summary": "Get a User by username",
                 "parameters": [
                     {
                         "type": "string",
@@ -85,31 +95,36 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/db.User"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update the subscription status of a user by username",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update the subscription status of a User by username",
                 "consumes": [
                     "application/json"
                 ],
@@ -119,7 +134,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Update a user's subscription status",
+                "summary": "Update a User's subscription status",
                 "parameters": [
                     {
                         "type": "string",
@@ -129,12 +144,12 @@
                         "required": true
                     },
                     {
-                        "description": "Updated user details",
-                        "name": "user",
+                        "description": "Updated User details",
+                        "name": "User",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/db.User"
                         }
                     }
                 ],
@@ -142,32 +157,43 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/db.User"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Delete a user by their username",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Delete a User by their username",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Delete a user by username",
+                "summary": "Delete a User by username",
                 "parameters": [
                     {
                         "type": "string",
@@ -184,13 +210,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -198,14 +224,19 @@
         },
         "/users/{username}/exists": {
             "get": {
-                "description": "Check if a user exists by their username",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Check if a User exists by their username",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Check if a user exists by username",
+                "summary": "Check if a User exists by username",
                 "parameters": [
                     {
                         "type": "string",
@@ -225,13 +256,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -239,14 +270,19 @@
         },
         "/users/{username}/subscription": {
             "get": {
-                "description": "Get the subscription status of a user by their username",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get the subscription status of a User by their username",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "users"
                 ],
-                "summary": "Get subscription status of a user by username",
+                "summary": "Get subscription status of a User by username",
                 "parameters": [
                     {
                         "type": "string",
@@ -266,19 +302,83 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{username}/traffic": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Update the traffic used by a User identified by username",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update the amount of traffic used by a User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Traffic used in MB",
+                        "name": "traffic",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     }
                 }
@@ -286,14 +386,39 @@
         }
     },
     "definitions": {
-        "user.User": {
+        "db.Subscription": {
             "type": "object",
             "properties": {
+                "duration": {
+                    "description": "month, year, forever",
+                    "type": "string"
+                },
+                "end_subscription": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "subscription_status": {
+                "start_subscription": {
                     "type": "string"
+                },
+                "subscription_status": {
+                    "description": "active, inactive",
+                    "type": "string"
+                }
+            }
+        },
+        "db.User": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "subscription": {
+                    "$ref": "#/definitions/db.Subscription"
                 },
                 "traffic": {
                     "description": "in Mb",
@@ -303,6 +428,29 @@
                     "type": "string"
                 }
             }
+        },
+        "handler.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
